# meander-morphology-classifier

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  app.py  environment-legacy-gui.yml  pyproject.toml  requirements-legacy-gui.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: streamlit_app.py
docs/: compound_end_to_end.md  compound_latent_space.md  compound_workflow.md  data_format.md  gui.md  legacy_model_environment.md  legacy_script_mapping.md  live_demo.md  model.md  model_files.md  reproducibility.md  single_bend_workflow.md  synthetic_data.md  validation_notes.md  zenodo_release_checklist.md
docs/app/: streamlit_app.py
docs/examples/: quickstart_single_bend.py
docs/scripts/: download_model.py
docs/src/meander_morphology/: curvature.py  geometry.py  latent.py  model.py  pipeline.py  preprocessing.py
docs/tests/: test_curvature_bends.py  test_cwt_clustering.py  test_io_pipeline.py
examples/: example_centerline.csv
models/: README.md
scripts/: classify_single_bends.py  diagnose_autoencoder.py  diagnose_compound_model.py  encode_compound_bends.py  evaluate_autoencoder.py  extract_compound_bends.py  extract_single_bends.py  generate_synthetic_bends.py  plot_cluster_statistics.py  plot_kinoshita_parameters.py  run_compound_workflow.py  run_single_bend_workflow.py
src/meander_morphology/: __init__.py  bends.py  clustering.py  compound.py  compound_diagnostics.py  compound_model.py  compound_pipeline.py  cwt.py  io.py  model.py  pipeline.py  plotting.py  synthetic.py
tests/: test_compound.py  test_compound_diagnostics.py  test_compound_model.py  test_compound_training_image.py  test_compound_training_preview.py  test_curvature_bends.py  test_cwt_clustering.py  test_cwt_legacy.py  test_geometry.py  test_io_pipeline.py  test_model_encoder_extraction.py  test_model_legacy_loading.py  test_streamlit_import.py  test_synthetic.py
tools/: apply_legacy_gui_support_patch.py
